Removed line from pom file.